task:task-2 complete

--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mini Site Specification</title>
+    <title>Home</title>
   </head>
   <style>
     body {
@@ -25,6 +25,10 @@
       display: flex;
       gap: 2rem;
       margin-right: 1rem;
+    }
+    a {
+      text-decoration: none;
+      color: black;
     }
     .main-div1 {
       display: flex;
@@ -114,13 +118,13 @@
   </style>
   <body>
     <div class="title-div">
-      <h2 class="t1">My "ONE STOP" specification</h2>
+      <h2 class="t1">My "ONE STOP"</h2>
       <div class="links">
-        <h3>Home</h3>
-        <h3>Activities</h3>
-        <h3>Resources</h3>
-        <h3>Blog</h3>
-        <h3>Contact Us</h3>
+        <a href="#"><h3>Home</h3></a>
+        <a href="./about.html"><h3>About</h3></a>
+        <a href="./explore.html"><h3>Explore</h3></a>
+        <a href="./blog.html"><h3>Blog</h3></a>
+        <a href="./contact.html"><h3>Contact Us</h3></a>
       </div>
     </div>
     <div class="main-div1">
@@ -137,7 +141,7 @@
       </div>
 
       <div class="sub-main2">
-        <img class="creativity" src="/creativity.jpg" alt="creativity-img" />
+        <img class="creativity" src="../creativity.jpg" alt="creativity-img" />
       </div>
     </div>
     <div class="audience">
